kustomize-bluegreen/green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: green-deploy
  name: green-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: green-deploy
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
