kustomize-bluegreen/green/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: green-deploy
  name: green-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green-deploy
  type: NodePort
status:
  loadBalancer: {}
